<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/FRGContainerPadding">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/TXV_FRGLogin_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/FRGLogin_Title"
            android:textSize="@dimen/FRGTitleTextSize"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/TXV_FRGLogin_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_TXVUserName"
            android:textSize="@dimen/FRGLabelTextSize" />
        <EditText
            android:id="@+id/ETX_FRGLogin_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/FRGLogin_ETXUserName"
            android:inputType="text"
            android:textSize="@dimen/FRGEditTextTextSize" />
        <TextView
            android:id="@+id/TXV_FRGLogin_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_TXVPassword"
            android:textSize="@dimen/FRGLabelTextSize" />
        <EditText
            android:id="@+id/ETX_FRGLogin_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/FRGLogin_ETXPassword"
            android:inputType="textPassword"
            android:textSize="@dimen/FRGEditTextTextSize" />
        <TextView
            android:id="@+id/TXV_FRGLogin_RecoverPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/FRGLogin_TXVRecoverPassword"
            android:textSize="@dimen/FRGTextView2TextSize" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <Button
            android:id="@+id/BTN_FRGLogin_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_BTNLogin"
            android:textSize="@dimen/FRGButtonTextSize"
            android:textStyle="bold" />
        <Button
            android:id="@+id/BTN_FRGLogin_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FRGLogin_BTNRegister"
            android:textSize="@dimen/FRGButtonTextSize"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
